--- a/find.html
+++ b/find.html
@@ -62,12 +62,12 @@
             </div>
             <div class="open-post">
                 <div class="open-post__column">
-                    <h5 class="open-post__title">#BTS</h5>
-                    <h6 class="open-post__hashtags">#bts#army#friends</h6>
+                    <h5 class="open-post__title">#Doorian</h5>
+                    <h6 class="open-post__hashtags">#the#cutest#puppy#is#doorian</h6>
                     <div class="open-post__members">
                         <img src="https://i.pinimg.com/736x/6d/d9/b0/6dd9b07af0f6f1ffef4049fae4c8d299--snoopy-love-snoopy-charlie.jpg"
                             alt="">
-                        <span class="open-post__member-count">802 members</span>
+                        <span class="open-post__member-count">1000 members</span>
                         <div class="divider"></div>
                         <span class="open-post__member-status">Active</span>
                     </div>
@@ -78,7 +78,7 @@
                             alt="">
                         <div class="open-post__heart-count">
                             <i class="fas fa-heart"></i>
-                            <span>326</span>
+                            <span>1000</span>
                         </div>
                     </div>
                 </div>
