--- a/more.html
+++ b/more.html
@@ -43,8 +43,10 @@
                 <div class="user-component__text">
                     <h4 class="user-component__title">Doorian</h4>
                     <div class="user-component__phone">
-                        <h6 class="user-component__subtitle">+89 010-1234-1234</h6>
-                        <span>!</span>
+                        <h6 class="user-component__subtitle">+89 010-1234-1234
+                            <i class="fas fas fa-exclamation-circle"></i>
+                        </h6>
+
                     </div>
                 </div>
             </div>
@@ -55,23 +57,26 @@
 
         <div class="icon-row">
             <div class="icon-row__icon">
-                <i class="far fa-calendar"></i><span>Calender</span>
+                <i class="far fa-calendar-check"></i><span>Calender</span>
+                <span class="nav__alert"></span>
             </div>
 
             <div class="icon-row__icon">
                 <i class="far fa-smile-beam"></i><span>Emoticons</span>
             </div>
             <div class="icon-row__icon">
-                <i class="fas fa-paint-roller"></i><span>Themes</span>
+                <i class="fas fa-brush"></i><span>Themes</span>
             </div>
             <div class="icon-row__icon">
                 <i class="fas fa-file-invoice-dollar"></i><span>Account</span>
             </div>
+        </div>
+        <div class="icon-row">
             <div class="icon-row__icon">
-                <i class="fas fa-file-invoice-dollar"></i><span>Talk Drive</span>
+                <i class="far fa-folder"></i><span>Talk Drive</span>
             </div>
             <div class="icon-row__icon">
-                <i class="fas fa-file-invoice-dollar"></i><span>OpenChat</span>
+                <i class="far fa-comments"></i><span>OpenChat</span>
             </div>
         </div>
 
